ISAPP-67: implemented service